--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<script src="game.js"></script>
+
 	<script src="lib/jquery-3.1.1.min.js"></script>
+	<script src="misc.js"></script>`
+	<script src="player.js"></script>
+	<script src="board.js"></script>
+	<script src="game.js"></script>
 
 	<title>xTron</title>
 </head>
