Board is now moveable

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 			ESC: restart
 			P: pause
 			D: enable/disable debug info
+			WSAD: map move
+			+/-: map size
 			Mouse: map editor
 		</pre>
 	</div>
