--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			P: pause
 			D: enable/disable debug info
 			WSAD: map move
-			+/-: map size
+			+/- keypad: map size
 			Mouse: map editor
 		</pre>
 	</div>
