--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			Z: jump
 			ESC: restart
 			P: pause
-			D: enable/disable debug info
+			Q: enable/disable debug info
 			WSAD: map move
 			+/- keypad: map size
 			Mouse: map editor
