--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
 	<meta charset="UTF-8" />
+	
+	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 
-	<script src="lib/jquery-3.1.1.min.js"></script>
 	<script src="misc.js"></script>`
 	<script src="player.js"></script>
+	<script src='multiplayer.js'></script>
 	<script src="board.js"></script>
 	<script src="game.js"></script>
 
