--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="UTF-8" />
+
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	
 	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
@@ -12,6 +14,7 @@
 	<script src='multiplayer.js'></script>
 	<script src="board.js"></script>
 	<script src="game.js"></script>
+	<script src="menu.js"></script>
 
 	<title>xTron</title>
 </head>
@@ -35,7 +38,8 @@
 			Cursors: movement
 			X: turbo
 			Z: jump
-			ESC: restart
+			R: restart
+			ESC: menu
 			P: pause
 			Q: enable/disable debug info
 			WSAD: map move
