improvement game menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 
 	<script src="misc.js"></script>`
+	<script src="hud.js"></script>
 	<script src="player.js"></script>
 	<script src='multiplayer.js'></script>
 	<script src="board.js"></script>
@@ -20,10 +21,6 @@
 </head>
 
 <body>
-	<div align="center"  style="background-color:#e6eeff">
-		<h1>xTron by solaris (solargrim@gmail.com)</h1><BR>
-	</div>
-
 	<div align="center">
 		<canvas id="game"> Your browser sucks! </canvas>
 	</div>
@@ -32,20 +29,5 @@
     	initGame(document.getElementById("game"));
 	</script>
 
-	<div align="center" style="background-color:#e6eeff">
-		<BR>
-		<pre>
-			Cursors: movement
-			X: turbo
-			Z: jump
-			R: restart
-			ESC: menu
-			P: pause
-			Q: enable/disable debug info
-			WSAD: map move
-			+/- keypad: map size
-			Mouse: map editor
-		</pre>
-	</div>
 </body>
 </html>
