--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	
 	<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="lib/fpsmeter.js"></script>
 
 	<script src="misc.js"></script>`
 	<script src="hud.js"></script>
