--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="misc.js"></script>`
 	<script src="hud.js"></script>
 	<script src="player.js"></script>
+	<script src="mission.js"></script>
 	<script src='multiplayer.js'></script>
 	<script src="board.js"></script>
 	<script src="game.js"></script>
